<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16"
    tools:context=".detalhefuncionario.DetalheFuncionarioFragment">

    <TextView
        android:id="@+id/tvTextoSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_salario_a_receber"
        android:textColor="@color/black"
        android:textSize="@dimen/text_dimen_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="@dimen/dimen_50"
        android:layout_height="@dimen/dimen_50"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/avatar"
        app:layout_constraintTop_toBottomOf="@id/tvTextoSalario"
        android:contentDescription="@string/imagem_funcionario" />

    <TextView
        android:id="@+id/etNomeFuncionario"
        android:layout_width="@dimen/dimen_0"
        android:layout_marginStart="@dimen/dimen_4"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:textColor="@color/black"
        android:text="@string/nome_funcionario"
        app:layout_constraintBottom_toBottomOf="@+id/ivAvatar"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/etHorasTrabalhadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:text="@string/horas_de_trabalho"
        app:layout_constraintTop_toBottomOf="@+id/etNomeFuncionario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/etValorDasHoras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:text="@string/valor_das_horas"
        app:layout_constraintTop_toBottomOf="@+id/etHorasTrabalhadas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTotalAReceber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:textColor="@color/black"
        android:text="@string/salario_a_receber"
        app:layout_constraintTop_toBottomOf="@+id/etValorDasHoras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>