<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16"
    android:background="@color/color_backgroung_fragments"
    tools:context=".cadastro.CadastroFragment">

    <TextView
        android:id="@+id/tvTextoSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_funcionario"
        android:textColor="@color/black"
        android:textSize="@dimen/text_dimen_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeFuncionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:autofillHints="name"
        android:hint="@string/nome_e_sobrenome"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tvTextoSalario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etHorasTrabalhadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:hint="@string/horas_trabalhadas"
        android:autofillHints="name"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/etNomeFuncionario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etValorDasHoras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:hint="@string/valor_hora"
        android:autofillHints="name"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/etHorasTrabalhadas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnCalcularSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_64"
        android:text="@string/calcular_salario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorDasHoras"/>

</androidx.constraintlayout.widget.ConstraintLayout>